--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><a href="3.html"></a>JavaScript</li><br>
     </ol>
     <h2>WEB</h2>
-    <p>
+    <p>hello
     </p>
 </body>
 </html>
